--- a/src/App.css
+++ b/src/App.css
@@ -1,124 +1,191 @@
 /* Navigointipalkki */
 .navigation {
-  display: flex; /* Flexboxin käyttöönotto, jotta navigointipalkin sisältö voidaan sijoittaa joustavasti */
-  justify-content: flex-start; /* Sisältö jaetaan tasaisesti palkin sisällä vaakasuunnassa */
-  align-items: center; /* Sisältö keskitetään pystysuunnassa navigointipalkin sisällä */
-  background-color: white; /* Taustaväri valkoiseksi */
-  border-bottom: 1px solid #f0f0f0; /* Alareunaan lisätään vaaleanharmaa reunaviiva */
-  padding: 10px; /* Lisätään hieman tyhjää tilaa navigointipalkin ympärille */
+  display: flex;
+  /* Flexboxin käyttöönotto, jotta navigointipalkin sisältö voidaan sijoittaa joustavasti */
+  justify-content: flex-start;
+  /* Sisältö jaetaan tasaisesti palkin sisällä vaakasuunnassa */
+  align-items: center;
+  /* Sisältö keskitetään pystysuunnassa navigointipalkin sisällä */
+  background-color: white;
+  /* Taustaväri valkoiseksi */
+  border-bottom: 1px solid #f0f0f0;
+  /* Alareunaan lisätään vaaleanharmaa reunaviiva */
+  padding: 10px;
+  /* Lisätään hieman tyhjää tilaa navigointipalkin ympärille */
   padding-left: 20px;
-  position: relative; /* Lisätään suhteellinen sijainti */
+  position: relative;
+  /* Lisätään suhteellinen sijainti */
 }
 
 
 /* Navigointipainikkeet */
 .nav-items {
-  display: flex; /* Flexboxin käyttöönotto navigointipainikkeiden sijoittamiseksi joustavasti */
-  list-style-type: none; /* Luetteloitu merkki poistetaan */
-  margin: 0; /* Marginaalit nollataan */
-  padding: 0; /* Sisäiset täytöt nollataan */
+  display: flex;
+  /* Flexboxin käyttöönotto navigointipainikkeiden sijoittamiseksi joustavasti */
+  list-style-type: none;
+  /* Luetteloitu merkki poistetaan */
+  margin: 0;
+  /* Marginaalit nollataan */
+  padding: 0;
+  /* Sisäiset täytöt nollataan */
 }
 
 .nav-items a {
-  color: #6e492f; /* Linkkien tekstiväri määritellään */
-  text-decoration: none; /* Linkkien alleviivaus poistetaan */
-  font-size: 20px; /* Linkkien fonttikoko asetetaan */
+  color: #6e492f;
+  /* Linkkien tekstiväri määritellään */
+  text-decoration: none;
+  /* Linkkien alleviivaus poistetaan */
+  font-size: 20px;
+  /* Linkkien fonttikoko asetetaan */
 }
 
 .nav-items li {
-  margin-right: 20px; /* Navigointipainikkeiden väliin lisätään oikealle marginaalia */
+  margin-right: 20px;
+  /* Navigointipainikkeiden väliin lisätään oikealle marginaalia */
 }
 
 .nav-items li button {
-  background: none; /* Painikkeiden taustaväri poistetaan */
-  border: none; /* Painikkeiden reunaviivat poistetaan */
-  cursor: pointer; /* Osoitin muutetaan osoittimeksi osoittimen yli */
-  text-transform: uppercase; /* Teksti muutetaan isoiksi kirjaimiksi */
+  background: none;
+  /* Painikkeiden taustaväri poistetaan */
+  border: none;
+  /* Painikkeiden reunaviivat poistetaan */
+  cursor: pointer;
+  /* Osoitin muutetaan osoittimeksi osoittimen yli */
+  text-transform: uppercase;
+  /* Teksti muutetaan isoiksi kirjaimiksi */
 }
 
 /* Aktiivinen navigointipainike */
 .active::after {
-  content: ''; /* Tyhjä sisältö lisätään aktiivisen painikkeen jälkeen */
-  display: block; /* Luo uusi lohko-elementti */
-  width: 100%; /* Viivan leveys asetetaan 100% */
-  height: 1px; /* Viivan korkeus asetetaan */
-  background-color: #6e492f; /* Viivan väri asetetaan ruskeaksi */
-  margin-top: 2px; /* Viivan yläreunan marginaali */
+  content: '';
+  /* Tyhjä sisältö lisätään aktiivisen painikkeen jälkeen */
+  display: block;
+  /* Luo uusi lohko-elementti */
+  width: 100%;
+  /* Viivan leveys asetetaan 100% */
+  height: 1px;
+  /* Viivan korkeus asetetaan */
+  background-color: #6e492f;
+  /* Viivan väri asetetaan ruskeaksi */
+  margin-top: 2px;
+  /* Viivan yläreunan marginaali */
 }
 
 /* Logo */
 .logo {
-  height: 60px; /* Logon korkeus asetetaan */
+  height: 60px;
+  /* Logon korkeus asetetaan */
   padding-right: 30px;
-  padding-left: 30px;
+  padding-left: 20px;
 }
 
-.component-hidden{
+.component-hidden {
   display: none;
 }
 
 
 /* Responsiivinen hampurilaisvalikko */
 .menu-icon {
-  display: none; /* Hampurilaisvalikko piilotetaan oletuksena */
-  flex-direction: column; /* Flexboxin suunta asetetaan pystysuoraan */
-  justify-content: space-between; /* Sisältö jaetaan tasaisesti pystysuunnassa */
-  width: 24px; /* Valikon leveys asetetaan */
-  height: 20px; /* Valikon korkeus asetetaan */
-  cursor: pointer; /* Osoitin muutetaan osoittimeksi osoittimen yli */
+  display: none;
+  /* Hampurilaisvalikko piilotetaan oletuksena */
+  flex-direction: column;
+  /* Flexboxin suunta asetetaan pystysuoraan */
+  justify-content: space-between;
+  /* Sisältö jaetaan tasaisesti pystysuunnassa */
+  width: 24px;
+  /* Valikon leveys asetetaan */
+  height: 20px;
+  /* Valikon korkeus asetetaan */
+  cursor: pointer;
+  /* Osoitin muutetaan osoittimeksi osoittimen yli */
   margin-left: auto;
   margin-right: 20px;
 }
 
 .menu-line {
-  width: 100%; /* Viivan leveys asetetaan 100% */
-  height: 2px; /* Viivan korkeus asetetaan */
-  background-color: #6e492f; /* Viivan väri asetetaan ruskeaksi */
+  width: 100%;
+  /* Viivan leveys asetetaan 100% */
+  height: 2px;
+  /* Viivan korkeus asetetaan */
+  background-color: #6e492f;
+  /* Viivan väri asetetaan ruskeaksi */
 }
 
 /* Taustanäkymä */
 .menu-overlay {
-  display: none; /* Taustanäkymä piilotetaan oletuksena */
-  position: fixed; /* Kiinnitetään taustanäkymä sivuston päälle */
-  top: 0; /* Yläreuna */
-  left: 0; /* Vasen reuna */
-  width: 100%; /* Leveys 100% */
-  background-color: rgba(158, 117, 77, 0.8); /* Taustaväri: ruskea, osittain läpinäkyvä */
-  z-index: 9; /* Pinon syvyysindeksi asetetaan */
+  display: none;
+  /* Taustanäkymä piilotetaan oletuksena */
+  position: fixed;
+  /* Kiinnitetään taustanäkymä sivuston päälle */
+  top: 0;
+  /* Yläreuna */
+  left: 0;
+  /* Vasen reuna */
+  width: 100%;
+  /* Leveys 100% */
+  background-color: rgba(158, 117, 77, 0.8);
+  /* Taustaväri: ruskea, osittain läpinäkyvä */
+  z-index: 9;
+  /* Pinon syvyysindeksi asetetaan */
 }
 
-@media (max-width: 576px) { /* Media Query pienille näyttöleveyksille */
+@media (max-width: 600px) {
+  /* Media Query pienille näyttöleveyksille */
 
-  
+
 
   .nav-items {
-    display: none; /* Piilota navigointipainikkeet pienillä näyttöleveyksillä */
-    flex-direction: column; /* Flexboxin suunta asetetaan pystysuoraan */
-    align-items: flex-end; /* Sisältö oikeaan reunaan */
+    display: none;
+    /* Piilota navigointipainikkeet pienillä näyttöleveyksillä */
+    flex-direction: column;
+    /* Flexboxin suunta asetetaan pystysuoraan */
+    align-items: flex-end;
+    /* Sisältö oikeaan reunaan */
   }
 
   .nav-items.open {
-    display: flex; /* Avattaessa näytä navigointipainikkeet */
-    position: absolute; /* Aseta absoluuttinen sijainti */
-    top: calc(100% + 10px); /* Yläreunaan lisätään 10px */
-    right: 20px; /* Oikeaan reunaan lisätään 10px */
-    background-color: transparent; /* Taustaväri: läpinäkyvä */
-    width: 100%; /* Vie koko näytön leveyden */
+    display: flex;
+    /* Avattaessa näytä navigointipainikkeet */
+    position: absolute;
+    /* Aseta absoluuttinen sijainti */
+    top: calc(100% + 10px);
+    /* Yläreunaan lisätään 10px */
+    right: 20px;
+    /* Oikeaan reunaan lisätään 10px */
+    background-color: transparent;
+    /* Taustaväri: läpinäkyvä */
+    width: 100%;
+    /* Vie koko näytön leveyden */
   }
 
   .nav-items li {
-    margin-right: 0; /* Marginaali oikealle nollataan */
-    margin-bottom: 10px; /* Marginaali alareunaan lisätään */
+    margin-right: 0;
+    /* Marginaali oikealle nollataan */
+    margin-bottom: 10px;
+    /* Marginaali alareunaan lisätään */
   }
 
   .menu-icon {
-    display: flex; /* Näytä hampurilaisvalikko avattaessa */
+    display: flex;
+    /* Näytä hampurilaisvalikko avattaessa */
   }
 
   .menu-overlay {
-    display: block; /* Näytä taustanäkymä avattaessa */
-    height: 100%; /* Korkeus 100% */
-    z-index: 8; /* Pinon syvyysindeksi asetetaan pienemmäksi kuin navigointipalkki */
+    display: block;
+    /* Näytä taustanäkymä avattaessa */
+    height: 100%;
+    /* Korkeus 100% */
+    z-index: 8;
+    /* Pinon syvyysindeksi asetetaan pienemmäksi kuin navigointipalkki */
+  }
+}
+
+@media(max-width: 480px) {
+
+  /* Logo */
+  .logo {
+    padding-right: 30px;
+    padding-left: 5px;
   }
 }
 
@@ -127,7 +194,7 @@
 
 
 
- 
+
 /*.navigation {
   display: flex;
   justify-content: space-between; 
@@ -229,15 +296,3 @@
     display: block; 
   }
 }*/
-
-
-
-
-
-
-
-
-
-
-
-
