--- a/src/Etusivu.css
+++ b/src/Etusivu.css
@@ -28,14 +28,18 @@
 /* Otsikon tyylit */
 #etusivu {
     font-size: 4em;
-    -webkit-text-stroke: 1px #4A301E;
+    -webkit-text-stroke: 2px #4A301E;
     /* width and color */
     /* Päivitetty fonttikoko */
 }
 
 h3 {
     font-size: 2em;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
+
 
 /* Tekstin divin absoluuttisesti sijoitettujen elementtien tyylit */
 .text-container {
@@ -77,6 +81,7 @@ input[type="text"] {
 
 /* Ympyröiden tyylit */
 .circle-container {
+    margin-right: 20px;
     display: flex;
     overflow-x: hidden;
     white-space: nowrap;
@@ -111,31 +116,59 @@ input[type="text"] {
     text-align: center;
 }
 
-/* Vieritettävän listan nuolien tyylit */
-.scroll-buttons {
-    position: absolute; /* Asetetaan absoluuttinen sijainti */
-    top: calc(50%);
-    transform: translateY(-50%); /* Siirretään ylös 50% suhteessa omaan korkeuteensa */
-    display: none; /* Piilotetaan napit oletuksena */
+
+.no-results {
+    display: flex;
+    align-items: center;
 }
 
-/* Vieritettävän listan nuolien tyylit */
-.scroll-buttons button {
-    margin-left: -40px;
+#surunaama {
+    width: 20%;
+    height: auto;
     margin-right: 10px;
-    font-size: 60px;
-    color: #6e492f;
-    background-color: #fff; /* Taustaväri */
-    border: none; /* Poista reuna */
-    border-radius: 50%; /* Pyöristä reunat */
-    padding: 10px; /* Lisää täytettä napin sisälle */
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); /* Lisää pieni varjo */
+    vertical-align: middle;
 }
+
+.no-results p {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0;
+}
+
+#etusivunnappulat {
+    display: flex;
+    /* Asetetaan flex-containeriksi */
+    align-items: center;
+    /* Asetetaan otsikko ja naput keskitetysti pystysuunnassa */
+}
+
+.nice-button {
+    background-color: white;
+    color: #6e492f;
+    border: 1px solid #6e492f;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.nice-button:hover {
+    background-color: #4a301e;
+    color: white;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+
 
 @media only screen and (max-width: 1700px) {
     .scroll-buttons {
-        display: flex; /* Asetetaan nappulat näkyviin kun näyttöleveys on alle 1700px */
-        justify-content: space-between; /* Asettaa napit yhtä etäälle toisistaan ja laittaa oikean reunan nappiin flex-end */
+        display: flex;
+        /* Asetetaan nappulat näkyviin kun näyttöleveys on alle 1700px */
+        justify-content: space-between;
+        /* Asettaa napit yhtä etäälle toisistaan ja laittaa oikean reunan nappiin flex-end */
         width: 100%;
     }
 }
@@ -222,7 +255,41 @@ input[type="text"] {
 
 }
 
-@media only screen and (max-width: 480px) {
+@media (max-width: 650px) {
+    .no-results {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .no-results p {
+        margin-top: 10px;
+        /* Lisää tilaa yläpuolelle */
+        margin-bottom: 20px;
+        /* Lisää tilaa alapuolelle */
+    }
+
+    #surunaama {
+        display: block;
+        margin: 0 auto;
+        /* Keskitä surunaama */
+    }
+}
+
+@media (max-width: 550px) {
+    #vaihdarivi {
+        display: block;
+        /* Aseta span-elementti block-elementiksi */
+    }
+
+    #surunaama {
+        width: 10vh;
+    }
+}
+
+
+
+
+@media only screen and (max-width: 528px) {
 
     /* Tekstin koko vielä pienemmälle näytölle */
     .text-container {
@@ -230,11 +297,12 @@ input[type="text"] {
     }
 
     #etusivu {
-        font-size: 2em;
+        font-size: 3em;
+        margin-left: 20px;
     }
 
     h2 {
-        font-size: 0.9em;
+        font-size: 1.1em;
     }
 
     h3 {
@@ -253,7 +321,24 @@ input[type="text"] {
         align-items: center;
         text-align: center;
     }
+
+    .circle-text {
+        margin-right: 40px;
+    }
+
+    .reseptit-container {
+        margin-left: 25px;
+        margin-right: 25px;
+        margin-bottom: 25px;
+    }
+    /* Napit pienenevät samassa suhteessa kuin teksti */
+    .nice-button {
+        font-size: 0.5em; /* Aseta fonttikoko haluttuun kokoonsa */
+    }
 }
+
+
+
 
 @media only screen and (max-width: 320px) {
 
@@ -263,11 +348,11 @@ input[type="text"] {
     }
 
     #etusivu {
-        font-size: 2em;
+        font-size: 2.5em;
     }
 
     h2 {
-        font-size: 0.9em;
+        font-size: 1.1em;
     }
 
     h3 {
