--- a/src/Tietoa.css
+++ b/src/Tietoa.css
@@ -1,5 +1,353 @@
-#tietoa-otsikko{
-    font-size: 3em;
+.tietoa-otsikko {
     margin-left: 50px;
+    font-size: 3em;
     color: #6e492f;
+}
+
+.Tietoa-container {
+    background-image: url('suklaa.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /* Asetetaan sisältö vasempaan reunaan */
+    justify-content: flex-start;
+    /* Asetetaan sisältö yläreunaan */
+}
+
+#tietoa-table {
+    margin-right: 50px;
+    margin-top: -20px;
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 80px 40px;
+    /* Lisää tilaa sarakkeiden ja rivien väliin */
+    width: calc(100% - 100px);
+    /* Yhdistetään solujen reunat */
+}
+
+#tietoa-table td {
+    border-color: #6e492f;
+    border-style: solid;
+    border-width: 2px;
+    border-collapse: separate;
+    position: relative;
+    height: 35vh;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+
+#tietoa-table td:nth-child(odd) {
+    width: 25%;
+    height: 25%;
+    border-radius: 50%;
+    /* Asetetaan ympyrän muotoinen reunus */
+
+    /* Asetetaan ensimmäiselle ja kolmannelle solulle pienempi leveys */
+}
+
+#tietoa-table td:nth-child(even) {
+    width: 80%;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+#person-icon {
+    width: 100%;
+    /* Täyttää koko ikonin koko td-elementin sisällä */
+    height: 100%;
+    color: #6e492f;
+}
+
+.icon {
+    width: 100%;
+    /* Täyttää koko ikonin koko td-elementin sisällä */
+    height: 100%;
+    color: #6e492f;
+}
+
+.tarkoitusotsikko {
+    font-size: 2em;
+    color: #6e492f;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.tietoa-teksti {
+    font-size: 1em;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.ReactModal__Content {
+
+    width: 90%;
+    height: 90%;
+}
+
+.ota-yhteytta-lomake {
+    display: flex;
+    flex-direction: column;
+    margin-left: 25px;
+    margin-right: 50px;
+}
+
+.ota-yhteytta-lomake label {
+    max-width: 60%;
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.ota-yhteytta-lomake textarea {
+    width: 80%;
+    margin-bottom: 20px;
+}
+
+#lomake-buttonit {
+    display: flex;
+}
+
+#lomake-buttonit button {
+    margin-right: 10px;
+    /* Lisää tarvittaessa väliä buttonien väliin */
+    width: 150px;
+    margin-left: 30px;
+    background-color: #6e492f;
+    /* Ruskea taustaväri */
+    color: white;
+    /* Valkoinen teksti, jotta se erottuu taustasta */
+    border: none;
+    /* Poista napin reunukset */
+    padding: 10px 20px;
+    /* Lisää napille hieman tilaa sisällön ympärille */
+}
+
+
+/* Yhteiset tyylit */
+.tietoa-otsikko {
+    margin-left: 50px;
+    font-size: 3em;
+    color: #6e492f;
+}
+
+.Tietoa-container {
+    background-image: url('suklaa.jpg');
+    background-size: cover;
+    background-position: center;
+    min-height: 90vh;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.Tietoa-content {
+    width: calc(100% - 100px);
+    margin-right: 50px;
+    margin-bottom: 50px;
+    margin-top: -20px;
+    border-collapse: separate;
+    border-spacing: 80px 40px;
+}
+
+#tietoa-table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 80px 40px;
+    width: calc(100% - 100px);
+}
+
+#tietoa-table td {
+    border-color: #6e492f;
+    border-style: solid;
+    border-width: 2px;
+    border-collapse: separate;
+    position: relative;
+    height: 35vh;
+}
+
+#tietoa-table td:nth-child(odd) {
+    width: 25%;
+    height: 25%;
+    border-radius: 50%;
+}
+
+#tietoa-table td:nth-child(even) {
+    width: 80%;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.icon {
+    width: 100%;
+    height: 100%;
+    color: #6e492f;
+}
+
+.tarkoitusotsikko {
+    font-size: 2em;
+    color: #6e492f;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.tietoa-teksti {
+    font-size: 1em;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+@media (max-width: 1600px) {
+    .Tietoa-content {
+        width: 100%;
+    }
+}
+
+@media (max-width: 1200px) {
+
+    .tietoa-otsikko {
+        margin-left: 50px;
+        font-size: 3em;
+        color: #6e492f;
+        text-shadow: -1px -1px 0 #fff,
+            1px -1px 0 #fff,
+            -1px 1px 0 #fff,
+            1px 1px 0 #fff;
+    }
+
+    .Tietoa-content {
+        margin-left: -30px;
+        align-items: center;
+        width: 100%;
+    }
+
+
+    #tietoa-table td {
+        width: 100%;
+        min-height: 40vh;
+    }
+
+    #tietoa-table td:nth-child(even) {
+        width: 100%;
+        border-radius: 0;
+        min-height: 40vh;
+    }
+
+    #tietoa-table td:nth-child(odd) {
+        display: none;
+    }
+}
+
+@media (max-width: 676px) {
+    .tietoa-otsikko {
+        margin-left: 50px;
+        font-size: 3em;
+        color: #6e492f;
+        text-shadow: none;
+    }
+
+    #tietoa-table td:nth-child(even) {
+        min-width: 50vh;
+        min-height: 40vh;
+    }
+}
+
+@media (max-width: 590px) {
+
+    .tietoa-otsikko {
+        margin-left: 50px;
+        font-size: 3em;
+        color: #6e492f;
+        text-shadow: -1px -1px 0 #fff,
+            1px -1px 0 #fff,
+            -1px 1px 0 #fff,
+            1px 1px 0 #fff;
+        ;
+    }
+
+    #tietoa-table td:nth-child(even) {
+        min-width: 40vh;
+        min-height: 30vh;
+    }
+}
+
+@media (max-width: 480px) {
+
+    #tietoa-table td:nth-child(even) {
+        width: 100%;
+        min-height: fit-content;
+    }
+
+    .tietoa-otsikko {
+        margin-left: 20px;
+        font-size: 2em;
+        color: #6e492f;
+    }
+
+    #tietoa-table {
+        margin-right: 25px;
+        margin-left: -25px;
+        width: calc(100% - 50px);
+        /* Yhdistetään solujen reunat */
+    }
+
+    .tarkoitusotsikko {
+        font-size: 1.5em;
+        color: #6e492f;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    #lomake-buttonit {
+        display: flex;
+        flex-direction: column;
+        /* Asetetaan napit pystysuoraan allekkain */
+    }
+
+    #lomake-buttonit button {
+        margin-right: 10px;
+        margin-bottom: 20px;
+        /* Lisää tarvittaessa väliä buttonien väliin */
+        width: 150px;
+        margin-left: 25px;
+        background-color: #6e492f;
+        /* Ruskea taustaväri */
+        color: white;
+        /* Valkoinen teksti, jotta se erottuu taustasta */
+        border: none;
+        /* Poista napin reunukset */
+        padding: 10px 20px;
+        /* Lisää napille hieman tilaa sisällön ympärille */
+    }
+
+    .ota-yhteytta-lomake {
+        margin-left: 0px;
+        margin-right: 25px;
+    }
+
+    
+}
+
+@media only screen and (max-width: 320px) {
+
+    #tietoa-table td:nth-child(even) {
+        min-width: 30vh;
+        min-height: 20vh;
+    }
+
+    .tietoa-otsikko {
+        margin-left: 20px;
+        font-size: 1.5em;
+        color: #6e492f;
+    }
+
+    .tarkoitusotsikko {
+        font-size: 1.0em;
+        color: #6e492f;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+
 }
